--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -74,7 +74,7 @@ img {
     text-decoration: none;
 }
 #nav_spe li a:hover {
-    color: #00FF2C;
+    color: #009BFF;
     text-decoration: none;
 }
 #nav li a:active {
